--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="pizza_menu_title">Menu</string>
+    <string name="add_to_card_label">Add to cart</string>
 </resources>
