--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="pizza_menu_title">Menu</string>
     <string name="add_to_card_label">Add to cart</string>
+    <string name="pizza_search_hint">Write something</string>
 </resources>
