--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="pizza_menu_title">Menu</string>
     <string name="add_to_card_label">Add to cart</string>
     <string name="pizza_search_hint">Write something</string>
+    <string name="orders_title">Cart</string>
+    <string name="place_order_label">Place order</string>
+    <string name="checkout_label">Checkout</string>
 </resources>
