--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="order_success_description">We will call you soon to confirm order details</string>
     <string name="order_success_button_label">Back to Menu</string>
     <string name="gallery_item_count_template">%1$d/%2$d</string>
+    <string name="price_template">%1$s₽</string>
 </resources>
