--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="gallery_item_count_template">%1$d/%2$d</string>
     <string name="price_template">%1$s₽</string>
     <string name="internet_error_message">Please check your internet connection</string>
+    <string name="clear_cart_warning_label">Are you sure you want to clear cart?</string>
+    <string name="common_yes">Yes</string>
+    <string name="common_close">Close</string>
+    <string name="remove_order_warning_label">Are you sure that you want to remove this item from your cart?</string>
 </resources>
